# superskills

./: .cursorrules  .env.template  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY_v2.5.0_fixes.md  LICENSE  MASTER_BRIEFING_TEMPLATE.yaml  MODEL_RESOLVER_TEST_REPORT.md  NARRATOR_TESTS_FIXED.md  PUBLICATION_COMPLETE.md  QUICKSTART.md  README.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.1.1.md  RELEASE_READINESS_REPORT.md  ROADMAP.md  TEMPLATE_PROTECTION_SUMMARY.md  WARP.md  pyproject.toml  requirements.txt  setup.sh
.github/: pull_request_template.md
archive/: README.md
cli/: __main__.py  main.py
dev/: GITHUB_RELEASE_v2.2.1.md  PROFILE_AUDIT_SUMMARY.md  PROFILE_TEMPLATE.md  PUSH_INSTRUCTIONS.md  RELEASE_CHECKLIST_v2.2.1.md  RELEASE_NOTES_v2.2.1.md  RELEASE_NOTES_v2.4.0.md
docs/: AI_ASSISTANT_GUIDE.md  CREDENTIAL_SETUP.md  CREDENTIAL_SYSTEM.md  DEVELOPMENT_HISTORY.md  IDE_INTEGRATION.md  NATURAL_LANGUAGE.md  OPENCLAW_INTEGRATION.md  PROFILE_CUSTOMIZATION.md  QUICKSTART.md  SKILL_DEVELOPMENT.md
new-skills/: 00-manager.md  01-researcher.md  03-copywriter.md  04-editor.md  05-publisher.md  QUICKSTART.md  README.md  SETUP-COMPLETE.md  _template-claude-skills.md  author-agent.md  builder-agent.md  coach-agent.md  context-engineer-agent.md  designer-agent.md  developer-agent.md  manager-agent.md  marketer-agent.md  producer-agent.md  project-brief-template.md  publisher-agent.md  quality-control-agent.md  researcher-agent.md  sales-agent.md  strategist-agent.md  translator-agent.md  webmaster-agent.md
scripts/: distribute_credentials.py  test_api_connections.py  update_skill_resources.py  validate_credentials.py  validate_skill_resources.py
superskills/: __init__.py  author.skill  builder.skill  coach.skill  context-engineer.skill  copywriter.skill  designer.skill  developer.skill  editor.skill  manager.skill  marketer.skill  narrator.skill  producer.skill  publisher.skill  quality-control.skill  researcher.skill  sales.skill  scraper.skill  strategist.skill  translator.skill  webmaster.skill
superskills-audit/: BRIEFING.md  BUGS.md  README.md  RESULTS.md
template/: SKILL.md
tests/: .env.test  FINAL_TEST_REPORT.md  TEST_STATUS.md  TEST_SUMMARY.md  conftest.py  requirements.txt  test_call_command.py  test_craft.py  test_credentials.py  test_ide_delegation.py  test_image_generator.py  test_intent_parser.py  test_intent_router.py  test_master_briefing.py  test_model_resolver.py  test_narrator.py  test_obsidian.py  test_obsidian_init.py  test_profile_hierarchy_integration.py  test_scraper.py  (+1 more)
(+293 files in other folders)
